<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    android:orientation="vertical">



    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/notification_adview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone">
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/notification_adview"
        android:background="@color/White">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/White">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentInsetEnd="0dp"
                android:contentInsetLeft="0dp"
                android:contentInsetRight="0dp"
                android:contentInsetStart="0dp"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="0.81"
                    android:background="@color/OrangeRed"
                    android:elevation="3dp">

                    <ImageView
                        android:id="@+id/back_arrow"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/arrow_left" />

                    <TextView
                        android:id="@+id/title_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/back_arrow"
                        android:layout_toRightOf="@+id/back_arrow"
                        android:text="@string/palli_palan"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_marginRight="10dp"
                        android:id="@+id/shareImg"
                        android:layout_width="25dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/share_ic"
                        android:contentDescription="TODO" />
                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_margin="5dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_marginRight="0.5dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/OrangeRed">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/part_str"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                android:textColor="@color/white" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="1dp"
                            android:layout_marginRight="0.5dp"
                            android:layout_weight="1"
                            android:background="@color/OrangeRed">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/left_str"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                android:textColor="@color/white" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginLeft="1dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/OrangeRed">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/right_str"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                android:textColor="@color/white" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/toInflateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        </LinearLayout>
        </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ProgressBar
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp" />


</RelativeLayout>
