<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/day_drawer_layout"
    android:layout_width="match_parent"

    android:layout_height="match_parent">-->

    <include
        android:id="@+id/weatherView"
        layout="@layout/test_day_app_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <!-- Framelayout to display Fragments -->
    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/help_image_view"
            layout="@layout/help_img_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <include
            android:id="@+id/circlePG"
            layout="@layout/circle_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"

            android:layout_marginBottom="65dp"
            android:layout_marginLeft="10dp">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/restart_currentdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@android:color/transparent"
                android:visibility="visible" />

            <TextView
                android:id="@+id/restart_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="16dp"
                android:text="@string/today"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textSize="12dp"
                android:visibility="visible" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="65dp"
            android:layout_marginRight="10dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/shareFloatingBtn"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/share_ic"
                android:visibility="visible" />
        </FrameLayout>


    </FrameLayout>
    <!-- Listview to display slider menu -->



    <TextView
        android:id="@+id/latitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textIsSelectable="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/longitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textIsSelectable="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/exitAlertBackgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BF000000"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/exitContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/round_alertbox_corner">

            <RelativeLayout
                android:id="@+id/titleLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/top_rounded_corner_layout">

                <RelativeLayout
                    android:id="@+id/appImageLayout"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp">

                    <ImageView
                        android:id="@+id/appImage"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_launcher_drawable" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/appTitleTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/appImageLayout"
                    android:text="@string/app_head"
                    android:textColor="@color/white"
                    android:textSize="14dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/quoteLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleLayout"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/quoteTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:lineSpacingExtra="4dp"
                    android:text=""
                    android:textColor="@color/dark_grey"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/quoteAuthorNameTv"
                    android:layout_marginRight="50dp"
                    android:layout_below="@id/quoteTv"
                    android:layout_alignParentRight="true"
                    android:text=""
                    android:textSize="12dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/dark_grey"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <TextView
                android:id="@+id/exitAlertTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/quoteLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="20dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/exitAlertTex"
                android:textColor="@color/dark_grey"
                android:textSize="11dp" />

            <RelativeLayout
                android:layout_marginBottom="10dp"
                android:id="@+id/yesOrNoLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/exitAlertTv">

                <RelativeLayout
                    android:id="@+id/noTvLayout"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp">

                    <TextView
                        android:id="@+id/noTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginTop="5dp"
                        android:text="No"
                        android:layout_centerHorizontal="true"
                        android:textColor="@drawable/textview_selector1"
                        android:textSize="14dp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/noTvLayout">

                    <TextView
                        android:id="@+id/yesTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginTop="5dp"
                        android:text="Yes"
                        android:layout_centerHorizontal="true"
                        android:textAlignment="center"
                        android:textColor="@drawable/textview_selector1"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>




<!--</android.support.v4.widget.DrawerLayout>-->

    <ProgressBar
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp" />
    </RelativeLayout>